--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
   <head>
     <title>Etch a Sketch</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
   </head>
   <body>
-    <div id="centerContainer">
-      <div id="grid-container">
-        <div id="grid-item"></div>
-      </div>
-      <script src="script.js"></script>
+    <h1>Caroline's Etch-a-Sketch!</h1>
+    <div id="grid-container">
+      <div id="grid-item"></div>
     </div>
-    <!-- <div id="colorpicker">
-      <label for="colorpicker">Pick a color:</label>
-      <input type="color" id="colorpicker" value="#ff0088" />
-    </div> -->
+    <br />
+    <br />
+    <button class="refresh-button">Start over!</button>
   </body>
 </html>
