--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <h1>Caroline's Etch-a-Sketch!</h1>
+    <div id="header">
+      Etch-a-Sketch!<br />
+      <button class="refresh-button">Start over!</button>
+    </div>
     <div id="grid-container">
       <div id="grid-item"></div>
     </div>
-    <br />
-    <br />
-    <button class="refresh-button">Start over!</button>
   </body>
 </html>
